--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,12 @@ article {
   box-shadow: var(--shadow-1);
   z-index: 1;
 }
+@media (min-width:1250px){
+  .sidebar{
+    width:300px; 
+    flex-shrink:0;
+  }
+}
 
 .separator {
   width: 100%;
@@ -331,10 +337,6 @@ main {
   gap: 15px;
 }
 
-.avatar-box {
-  background: var(--bg-gradient-onyx);
-  border-radius: 20px;
-}
 
 .info-content .name {
   color: var(--white-2);
@@ -515,47 +517,24 @@ main {
 .service { margin-bottom: 35px; }
 
 .service-title { margin-bottom: 20px; }
-
-.service-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
+.rounded-image{
+  border-radius: 10px;
 }
-
-.service-item {
-  position: relative;
-  background: var(--border-gradient-onyx);
-  padding: 20px;
-  border-radius: 14px;
-  box-shadow: var(--shadow-2);
-  z-index: 1;
+.service-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
 }
-
-.service-item::before {
-  content: "";
-  position: absolute;
-  inset: 1px;
-  background: var(--bg-gradient-jet);
-  border-radius: inherit;
-  z-index: -1;
+.service-list li{
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  color: white;
+  align-items: center;
+  font-size: 12px;
+  letter-spacing: 0.7px;
 }
-
-.service-icon-box { margin-bottom: 10px; }
-
-.service-icon-box img { margin: auto; }
-
-.service-content-box { text-align: center; }
-
-.service-item-title { margin-bottom: 7px; }
-
-.service-item-text {
-  color: var(--light-gray);
-  font-size: var(--fs-6);
-  font-weight: var(--fw-3);
-  line-height: 1.6;
-}
-
-
 /**
  * #testimonials 
  */
@@ -827,6 +806,9 @@ main {
   color: var(--light-gray);
   font-weight: var(--fw-300);
   line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
 }
 
 
@@ -956,7 +938,7 @@ main {
 .project-img {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 200px !important;
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: 15px;
@@ -1010,7 +992,10 @@ main {
 .project-item > a:hover img { transform: scale(1.1); }
 
 .project-title,
-.project-category { margin-left: 10px; }
+.project-category {
+  margin-left: 10px;
+  margin-top:10px;
+}
 
 .project-title {
   color: var(--white-2);
@@ -1018,11 +1003,12 @@ main {
   font-weight: var(--fw-400);
   text-transform: capitalize;
   line-height: 1.3;
+  height: 40px;
 }
 
 .project-category {
   color: var(--light-gray-70);
-  font-size: var(--fs-6);
+  font-size: var(--fs-8);
   font-weight: var(--fw-300);
 }
 
@@ -1723,12 +1709,6 @@ textarea.form-input::-webkit-resizer { display: none; }
    * ABOUT
    */
 
-  /* service */
-
-  .service-list {
-    grid-template-columns: 1fr 1fr;
-    gap: 20px 25px;
-  }
 
   /* testimonials */
 
@@ -1879,4 +1859,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .timeline-text { max-width: 700px; }
 
+}
+.rounded-full{
+  border-radius: 100%;
+}
+.object-cover{
+  object-fit: cover;
 }
