--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -447,7 +447,12 @@ main {
 
 
 .social-item .social-link:hover { color: var(--light-gray); }
-
+@media(max-width:580px){
+  .avatar-box img {
+    width: 80px !important; 
+    height: 80px !important;
+  }
+}
 
 
 
@@ -1325,7 +1330,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .avatar-box { border-radius: 30px; }
 
-  .avatar-box img { width: 120px; }
+  .avatar-box img {
+     width: 120px !important; 
+     height: 120px !important;
+  }
 
   .info-content .name { margin-bottom: 15px; }
 
